<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_nav_inicio"
        android:title="@string/nav_inicio" />

    <item
        android:id="@+id/nav_buscador"
        android:icon="@drawable/ic_nav_buscar"
        android:title="@string/nav_buscador" />

    <item
        android:id="@+id/nav_carrito"
        android:icon="@drawable/ic_nav_carrito"
        android:title="@string/nav_carrito" />

    <item
        android:id="@+id/nav_pedidos"
        android:icon="@drawable/ic_nav_pedidos"
        android:title="@string/nav_pedidos" />

    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_nav_perfil"
        android:title="@string/nav_perfil" />

</menu>
